digital-twin/simulation/device/deploy/040-Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: device-simulator
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: device-simulator
  ports:
    - port: 8080
      targetPort: http
      name: http
