digital-twin/simulation/device/deploy/050-Route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: device-simulator
spec:
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: device-simulator
